[gd_scene load_steps=2 format=3 uid="uid://bfin7ns6daqcn"]

[ext_resource type="Script" path="res://main.gd" id="1_fy6ao"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fy6ao")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FieldContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CasesLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "test"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "copy"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
